Revise HTML structure and tool descriptions
Updated the content and structure of the HTML page, including changes to the header and tool descriptions.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>RECURSOS DIGITALES</h1>
-                                <p>Herramientas de gestión y diagnóstico para colaboradores de BAMX</p>
+                                <p>Herramientas de gestión para colaboradores de BAMX</p>
 							</div>
 						</div>
 				</header> 
@@ -135,7 +135,7 @@
                     <a href="https://comunicacionbamx.github.io/Analizador/" target="_blank" class="tool-card">
                         <span class="icon fa-laptop"></span>
                         <h3>Analizador de mi Equipo</h3>
-                        <p>Obtén un reporte técnico detallado de los componentes y sistema de tu estación de trabajo.</p>
+                      
                     </a>
 				</div>
 
@@ -152,4 +152,5 @@
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
+
 </html>
