--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>RECURSOS DIGITALES</h1>
-                                <p>Herramientas de gestión para colaboradores de BAMX</p>
+                                <p>Herramientas de gestión y diagnóstico para colaboradores de BAMX</p>
 							</div>
 						</div>
 				</header> 
@@ -135,7 +135,7 @@
                     <a href="https://comunicacionbamx.github.io/Analizador/" target="_blank" class="tool-card">
                         <span class="icon fa-laptop"></span>
                         <h3>Analizador de mi Equipo</h3>
-                      
+                        <p>Obtén un reporte técnico detallado de los componentes y sistema de tu estación de trabajo.</p>
                     </a>
 				</div>
 
@@ -151,6 +151,74 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-	</body>
 
+        <div id="chat-bubble" onclick="toggleChat()" style="position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; background: #ff0000; border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 15px rgba(0,0,0,0.5); z-index: 10002; transition: transform 0.3s;">
+    <span style="color: white; font-size: 30px;">💬</span>
+</div>
+
+<div id="chat-window-container" style="display: none; position: fixed; bottom: 90px; right: 20px; width: 350px; height: 450px; background: #1c2331; border: 1px solid #ff0000; border-radius: 12px; flex-direction: column; z-index: 10002; box-shadow: 0 10px 30px rgba(0,0,0,0.6); overflow: hidden;">
+    <div style="background: #000; padding: 15px; color: white; font-weight: bold; border-bottom: 1px solid #ff0000; display: flex; justify-content: space-between;">
+        <span>🤖 Soporte IA BAMX</span>
+        <span onclick="toggleChat()" style="cursor:pointer;">✖</span>
+    </div>
+    <div id="chat-messages" style="flex: 1; padding: 15px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; background: rgba(0,0,0,0.2); color: #cfd8dc; font-size: 0.9rem;">
+        <div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">Hola, soy tu asistente técnico. Describe tu problema.</div>
+    </div>
+    <div style="padding: 10px; background: #000; display: flex; gap: 5px;">
+        <input type="text" id="chat-input" placeholder="Escribe aquí..." style="flex: 1; background: #1c2331; border: 1px solid #333; color: white; padding: 8px; border-radius: 4px;">
+        <button onclick="sendChatMessage()" style="background: #ff0000; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer; font-weight: bold;">></button>
+    </div>
+</div>
+
+<script>
+    function toggleChat() {
+        const chat = document.getElementById('chat-window-container');
+        const bubble = document.getElementById('chat-bubble');
+        if (chat.style.display === 'none' || chat.style.display === '') {
+            chat.style.display = 'flex';
+            bubble.style.transform = 'scale(0.8)';
+        } else {
+            chat.style.display = 'none';
+            bubble.style.transform = 'scale(1)';
+        }
+    }
+
+    async function sendChatMessage() {
+        const input = document.getElementById('chat-input');
+        const msgContainer = document.getElementById('chat-messages');
+        if (!input.value) return;
+
+        const userText = input.value;
+        msgContainer.innerHTML += `<div style="background: #ff0000; color: white; padding: 10px; border-radius: 8px; align-self: flex-end;">${userText}</div>`;
+        input.value = '';
+        msgContainer.scrollTop = msgContainer.scrollHeight;
+
+        const loadingId = 'loading-' + Date.now();
+        msgContainer.innerHTML += `<div id="${loadingId}" style="font-style: italic; font-size: 0.8rem; color: #8899a6;">La IA está pensando...</div>`;
+
+        try {
+            // RECUERDA: La API fallará si lo abres localmente como file://. Úsalo en GitHub Pages.
+            const response = await fetch("https://api-inference.huggingface.co/models/MistralAI/Mistral-7B-Instruct-v0.2", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    inputs: `[INST] Eres el soporte técnico de BAMX. Responde breve y solo sobre tecnología. Pregunta: ${userText} [/INST]`,
+                    options: { wait_for_model: true }
+                })
+            });
+            const data = await response.json();
+            document.getElementById(loadingId).remove();
+
+            let reply = data[0]?.generated_text || "Servicio temporalmente ocupado.";
+            if (reply.includes('[/INST]')) reply = reply.split('[/INST]').pop().trim();
+
+            msgContainer.innerHTML += `<div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">${reply}</div>`;
+        } catch (e) {
+            document.getElementById(loadingId).innerText = "Error de conexión (Usa HTTPS/GitHub).";
+        }
+        msgContainer.scrollTop = msgContainer.scrollHeight;
+    }
+</script>
+
+	</body>
 </html>
