--- a/index.html
+++ b/index.html
@@ -8,105 +8,25 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" type="image/png" href="logoico.png"> 
         <style>
-            /* SOLUCIÓN DEFINITIVA PARA EL FONDO */
-            #bg {
-                background-image: url("fondo2.png") !important;
-                background-size: cover !important;
-                background-position: center !important;
-                background-attachment: fixed !important;
-                z-index: -1 !important;
-            }
+            /* Tu estilo original se mantiene intacto */
+            #bg { background-image: url("fondo2.png") !important; background-size: cover !important; background-position: center !important; background-attachment: fixed !important; z-index: -1 !important; }
+            #bg:before, #bg:after { background-image: none !important; background: rgba(0, 0, 0, 0.4) !important; content: '' !important; display: block !important; }
+            #top-nav { position: fixed; top: 0; left: 0; width: 100%; height: 100px; background: rgba(0, 0, 0, 0.95); border-bottom: 2px solid #ff0000; display: flex; justify-content: space-between; align-items: center; padding: 0 2rem; z-index: 10001; }
+            .nav-logo { height: 70px; width: auto; object-fit: contain; }
+            .tools-container { display: flex; justify-content: center; gap: 2rem; width: 100%; max-width: 900px; margin: 2rem auto; flex-wrap: wrap; }
+            .tool-card { flex: 1; min-width: 300px; background: rgba(255, 255, 255, 0.05); border: 1px solid #ff0000; padding: 2.5rem; text-align: center; transition: all 0.3s ease; text-decoration: none !important; }
+            .tool-card:hover { transform: translateY(-10px); background: rgba(255, 0, 0, 0.1); box-shadow: 0 10px 20px rgba(0,0,0,0.5); }
+            .tool-card .icon { font-size: 3.5rem; color: #ff0000; margin-bottom: 1.5rem; display: block; }
+            .tool-card h3 { margin-bottom: 1rem; letter-spacing: 2px; color: #ffffff; }
+            #wrapper { padding-top: 150px; display: flex; flex-direction: column; align-items: center; }
+            .back-link { margin-top: 3rem; color: #ffffff; text-decoration: none; font-size: 0.8rem; letter-spacing: 2px; border-bottom: 1px solid #ff0000; }
 
-            /* Eliminamos las capas de la plantilla que bloquean la imagen */
-            #bg:before, #bg:after {
-                background-image: none !important;
-                background: rgba(0, 0, 0, 0.4) !important; /* Capa oscura para leer texto */
-                content: '' !important;
-                display: block !important;
-            }
-
-            /* Barra Superior */
-            #top-nav {
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100px;
-                background: rgba(0, 0, 0, 0.95);
-                border-bottom: 2px solid #ff0000;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 0 2rem;
-                z-index: 10001;
-            }
-
-            .nav-logo {
-                height: 70px;
-                width: auto;
-                object-fit: contain;
-            }
-
-            /* Contenedor de Herramientas */
-            .tools-container {
-                display: flex;
-                justify-content: center;
-                gap: 2rem;
-                width: 100%;
-                max-width: 900px;
-                margin: 2rem auto;
-                flex-wrap: wrap;
-            }
-
-            .tool-card {
-                flex: 1;
-                min-width: 300px;
-                background: rgba(255, 255, 255, 0.05);
-                border: 1px solid #ff0000;
-                padding: 2.5rem;
-                text-align: center;
-                transition: all 0.3s ease;
-                text-decoration: none !important;
-            }
-
-            .tool-card:hover {
-                transform: translateY(-10px);
-                background: rgba(255, 0, 0, 0.1);
-                box-shadow: 0 10px 20px rgba(0,0,0,0.5);
-            }
-
-            .tool-card .icon {
-                font-size: 3.5rem;
-                color: #ff0000;
-                margin-bottom: 1.5rem;
-                display: block;
-            }
-
-            .tool-card h3 {
-                margin-bottom: 1rem;
-                letter-spacing: 2px;
-                color: #ffffff;
-            }
-
-            #wrapper {
-                padding-top: 150px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .back-link {
-                margin-top: 3rem;
-                color: #ffffff;
-                text-decoration: none;
-                font-size: 0.8rem;
-                letter-spacing: 2px;
-                border-bottom: 1px solid #ff0000;
-            }
+            /* Estilos de la burbuja de chat */
+            #chat-bubble { position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; background: #ff0000; border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 15px rgba(0,0,0,0.5); z-index: 10002; transition: transform 0.3s; }
+            #chat-window-container { display: none; position: fixed; bottom: 90px; right: 20px; width: 350px; height: 450px; background: #1c2331; border: 1px solid #ff0000; border-radius: 12px; flex-direction: column; z-index: 10002; box-shadow: 0 10px 30px rgba(0,0,0,0.6); overflow: hidden; }
         </style>
 	</head>
 	<body class="is-preload">
-
         <nav id="top-nav">
             <img src="LOGOS/3.png" alt="BAMX Puebla" class="nav-logo" />
             <div style="color: white; font-weight: bold; letter-spacing: 3px; font-size: 1.2rem;">UTILIDADES</div>
@@ -131,7 +51,6 @@
                         <h3>Genera tu propio QR</h3>
                         <p>Convierte tus enlaces y contactos en códigos QR listos para imprimir o compartir.</p>
                     </a>
-
                     <a href="https://comunicacionbamx.github.io/Analizador/" target="_blank" class="tool-card">
                         <span class="icon fa-laptop"></span>
                         <h3>Analizador de mi Equipo</h3>
@@ -146,79 +65,65 @@
 				</footer>	
 		</div> 
 
+        <div id="chat-bubble" onclick="toggleChat()"> <span style="color: white; font-size: 30px;">💬</span> </div>
+        <div id="chat-window-container">
+            <div style="background: #000; padding: 15px; color: white; font-weight: bold; border-bottom: 1px solid #ff0000; display: flex; justify-content: space-between;">
+                <span>🤖 Soporte IA BAMX</span> <span onclick="toggleChat()" style="cursor:pointer;">✖</span>
+            </div>
+            <div id="chat-messages" style="flex: 1; padding: 15px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; background: rgba(0,0,0,0.2); color: #cfd8dc; font-size: 0.9rem;">
+                <div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">Hola, soy tu asistente técnico de BAMX. ¿En qué puedo ayudarte?</div>
+            </div>
+            <div style="padding: 10px; background: #000; display: flex; gap: 5px;">
+                <input type="text" id="chat-input" placeholder="Escribe aquí..." style="flex: 1; background: #1c2331; border: 1px solid #333; color: white; padding: 8px; border-radius: 4px;">
+                <button onclick="sendChatMessage()" style="background: #ff0000; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer;">></button>
+            </div>
+        </div>
+
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/browser.min.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
 
-        <div id="chat-bubble" onclick="toggleChat()" style="position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; background: #ff0000; border-radius: 50%; display: flex; align-items: center; justify-content: center; cursor: pointer; box-shadow: 0 4px 15px rgba(0,0,0,0.5); z-index: 10002; transition: transform 0.3s;">
-    <span style="color: white; font-size: 30px;">💬</span>
-</div>
+        <script>
+            function toggleChat() {
+                const chat = document.getElementById('chat-window-container');
+                chat.style.display = (chat.style.display === 'none' || chat.style.display === '') ? 'flex' : 'none';
+            }
 
-<div id="chat-window-container" style="display: none; position: fixed; bottom: 90px; right: 20px; width: 350px; height: 450px; background: #1c2331; border: 1px solid #ff0000; border-radius: 12px; flex-direction: column; z-index: 10002; box-shadow: 0 10px 30px rgba(0,0,0,0.6); overflow: hidden;">
-    <div style="background: #000; padding: 15px; color: white; font-weight: bold; border-bottom: 1px solid #ff0000; display: flex; justify-content: space-between;">
-        <span>🤖 Soporte IA BAMX</span>
-        <span onclick="toggleChat()" style="cursor:pointer;">✖</span>
-    </div>
-    <div id="chat-messages" style="flex: 1; padding: 15px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; background: rgba(0,0,0,0.2); color: #cfd8dc; font-size: 0.9rem;">
-        <div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">Hola, soy tu asistente técnico. Describe tu problema.</div>
-    </div>
-    <div style="padding: 10px; background: #000; display: flex; gap: 5px;">
-        <input type="text" id="chat-input" placeholder="Escribe aquí..." style="flex: 1; background: #1c2331; border: 1px solid #333; color: white; padding: 8px; border-radius: 4px;">
-        <button onclick="sendChatMessage()" style="background: #ff0000; color: white; border: none; padding: 8px 15px; border-radius: 4px; cursor: pointer; font-weight: bold;">></button>
-    </div>
-</div>
+            async function sendChatMessage() {
+                const input = document.getElementById('chat-input');
+                const msgContainer = document.getElementById('chat-messages');
+                if (!input.value) return;
 
-<script>
-    function toggleChat() {
-        const chat = document.getElementById('chat-window-container');
-        const bubble = document.getElementById('chat-bubble');
-        if (chat.style.display === 'none' || chat.style.display === '') {
-            chat.style.display = 'flex';
-            bubble.style.transform = 'scale(0.8)';
-        } else {
-            chat.style.display = 'none';
-            bubble.style.transform = 'scale(1)';
-        }
-    }
+                const userText = input.value;
+                msgContainer.innerHTML += `<div style="background: #ff0000; color: white; padding: 10px; border-radius: 8px; align-self: flex-end;">${userText}</div>`;
+                input.value = '';
+                msgContainer.scrollTop = msgContainer.scrollHeight;
 
-    async function sendChatMessage() {
-        const input = document.getElementById('chat-input');
-        const msgContainer = document.getElementById('chat-messages');
-        if (!input.value) return;
+                const loadingId = 'loading-' + Date.now();
+                msgContainer.innerHTML += `<div id="${loadingId}" style="font-style: italic; font-size: 0.8rem; color: #8899a6;">Conectando con soporte...</div>`;
 
-        const userText = input.value;
-        msgContainer.innerHTML += `<div style="background: #ff0000; color: white; padding: 10px; border-radius: 8px; align-self: flex-end;">${userText}</div>`;
-        input.value = '';
-        msgContainer.scrollTop = msgContainer.scrollHeight;
-
-        const loadingId = 'loading-' + Date.now();
-        msgContainer.innerHTML += `<div id="${loadingId}" style="font-style: italic; font-size: 0.8rem; color: #8899a6;">La IA está pensando...</div>`;
-
-        try {
-            // RECUERDA: La API fallará si lo abres localmente como file://. Úsalo en GitHub Pages.
-            const response = await fetch("https://api-inference.huggingface.co/models/MistralAI/Mistral-7B-Instruct-v0.2", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({
-                    inputs: `[INST] Eres el soporte técnico de BAMX. Responde breve y solo sobre tecnología. Pregunta: ${userText} [/INST]`,
-                    options: { wait_for_model: true }
-                })
-            });
-            const data = await response.json();
-            document.getElementById(loadingId).remove();
-
-            let reply = data[0]?.generated_text || "Servicio temporalmente ocupado.";
-            if (reply.includes('[/INST]')) reply = reply.split('[/INST]').pop().trim();
-
-            msgContainer.innerHTML += `<div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">${reply}</div>`;
-        } catch (e) {
-            document.getElementById(loadingId).innerText = "Error de conexión (Usa HTTPS/GitHub).";
-        }
-        msgContainer.scrollTop = msgContainer.scrollHeight;
-    }
-</script>
-
+                try {
+                    // Este FETCH solo funcionará si el sitio está en HTTPS (GitHub Pages)
+                    const response = await fetch("https://api-inference.huggingface.co/models/MistralAI/Mistral-7B-Instruct-v0.2", {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify({
+                            inputs: `[INST] Eres el soporte técnico de BAMX. Responde breve y solo sobre tecnología. Pregunta: ${userText} [/INST]`,
+                            options: { wait_for_model: true }
+                        })
+                    });
+                    const data = await response.json();
+                    document.getElementById(loadingId).remove();
+                    let reply = data[0]?.generated_text || "Servicio ocupado.";
+                    if (reply.includes('[/INST]')) reply = reply.split('[/INST]').pop().trim();
+                    msgContainer.innerHTML += `<div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">${reply}</div>`;
+                } catch (e) {
+                    document.getElementById(loadingId).innerText = "Error: Sube el archivo a GitHub para activar la IA.";
+                }
+                msgContainer.scrollTop = msgContainer.scrollHeight;
+            }
+        </script>
 	</body>
 </html>
