--- a/index.html
+++ b/index.html
@@ -94,30 +94,37 @@
            async function sendChatMessage() {
     const input = document.getElementById('chat-input');
     const msgContainer = document.getElementById('chat-messages');
-    if (!input.value) return;
+    const sendBtn = input.nextElementSibling; // El botón rojo >
 
-    // Token y configuración
+    if (!input.value || sendBtn.disabled) return;
+
+    // --- CONFIGURACIÓN CRÍTICA ---
+    // Asegúrate de que no haya espacios antes ni después del token dentro de las comillas
     const HF_TOKEN = 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; 
     const MODEL_URL = "https://api-inference.huggingface.co/models/MistralAI/Mistral-7B-Instruct-v0.2";
 
     const userText = input.value;
-    msgContainer.innerHTML += `<div style="background: #ff0000; color: white; padding: 10px; border-radius: 8px; align-self: flex-end;">${userText}</div>`;
     input.value = '';
-    msgContainer.scrollTop = msgContainer.scrollHeight;
+    sendBtn.disabled = true; // Bloqueamos para evitar errores
+    sendBtn.style.opacity = "0.5";
 
+    // Mostrar mensaje del usuario
+    msgContainer.innerHTML += `<div style="background: #ff0000; color: white; padding: 10px; border-radius: 8px; align-self: flex-end; margin-bottom:5px;">${userText}</div>`;
+    
     const loadingId = 'loading-' + Date.now();
-    msgContainer.innerHTML += `<div id="${loadingId}" style="font-style: italic; font-size: 0.8rem; color: #8899a6;">La IA está despertando... espera 10s...</div>`;
+    msgContainer.innerHTML += `<div id="${loadingId}" style="font-style: italic; font-size: 0.8rem; color: #8899a6; margin-bottom:10px;">BAMX IA está despertando (puede tardar 20s)...</div>`;
+    msgContainer.scrollTop = msgContainer.scrollHeight;
 
     try {
         const response = await fetch(MODEL_URL, {
             method: "POST",
             headers: { 
                 "Content-Type": "application/json",
-                "Authorization": `Bearer ${HF_TOKEN}` // Esto es lo que falta para que responda
+                "Authorization": `Bearer ${HF_TOKEN.trim()}` 
             },
             body: JSON.stringify({
                 inputs: `[INST] Eres el soporte técnico de BAMX. Responde breve y solo sobre tecnología. Pregunta: ${userText} [/INST]`,
-                options: { wait_for_model: true } // Obliga al servidor a no dar error si la IA está cargando
+                options: { wait_for_model: true } 
             })
         });
 
@@ -125,16 +132,25 @@
         const loadingElement = document.getElementById(loadingId);
         if (loadingElement) loadingElement.remove();
 
-        let reply = data[0]?.generated_text || "El servidor está ocupado, intenta en un momento.";
-        if (reply.includes('[/INST]')) reply = reply.split('[/INST]').pop().trim();
-
-        msgContainer.innerHTML += `<div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">${reply}</div>`;
+        // Si la IA responde con error de carga
+        if (data.error) {
+            msgContainer.innerHTML += `<div style="color:#ffae00; font-size:0.8rem;">El servidor se está iniciando. Reintenta en 10 segundos.</div>`;
+        } else {
+            let reply = data[0]?.generated_text || "No recibí respuesta del servidor.";
+            if (reply.includes('[/INST]')) reply = reply.split('[/INST]').pop().trim();
+            msgContainer.innerHTML += `<div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000; margin-bottom:5px;">${reply}</div>`;
+        }
     } catch (e) {
-        document.getElementById(loadingId).innerText = "Error crítico de conexión.";
+        const loadingElement = document.getElementById(loadingId);
+        if (loadingElement) loadingElement.innerText = "Error de conexión con HuggingFace.";
+    } finally {
+        sendBtn.disabled = false;
+        sendBtn.style.opacity = "1";
+        msgContainer.scrollTop = msgContainer.scrollHeight;
     }
-    msgContainer.scrollTop = msgContainer.scrollHeight;
 }
         </script>
 	</body>
 </html>
+
 
