Fix HTML structure and restore content

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <span>🤖 Soporte IA BAMX</span> <span onclick="toggleChat()" style="cursor:pointer;">✖</span>
             </div>
             <div id="chat-messages" style="flex: 1; padding: 15px; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; background: rgba(0,0,0,0.2); color: #cfd8dc; font-size: 0.9rem;">
-                <div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;">Hola, soy tu asistente técnico de BAMX. ¿En qué puedo ayudarte?</div>
+                <div style="background: #334155; padding: 10px; border-radius: 8px; align-self: flex-start; border-left: 3px solid #ff0000;"> PROXIMAMENTE</div>
             </div>
             <div style="padding: 10px; background: #000; display: flex; gap: 5px;">
                 <input type="text" id="chat-input" placeholder="Escribe aquí..." style="flex: 1; background: #1c2331; border: 1px solid #333; color: white; padding: 8px; border-radius: 4px;">
@@ -151,6 +151,7 @@
         </script>
 	</body>
 </html>
+
 
 
 
